<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/About"
        android:onClick="openAbout"
        android:scaleType="fitXY"
        android:src="@drawable/logo1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton5"
        android:layout_alignLeft="@+id/imageButton4"
        android:text="@string/Finance" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_below="@+id/textView3"
        android:clickable="true"
        android:contentDescription="@string/Tech"
        android:onClick="openTech"
        android:src="@drawable/tech" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_centerVertical="true"
        android:text="@string/Weather" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton5"
        android:layout_toRightOf="@+id/imageButton2"
        android:text="@string/Jansabha" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageButton7"
        android:layout_marginRight="26dp"
        android:text="@string/Utilities" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton7"
        android:layout_alignLeft="@+id/imageButton7"
        android:text="@string/organic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton6"
        android:layout_alignParentBottom="true"
        android:text="@string/Tech" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageButton1"
        android:clickable="true"
        android:contentDescription="@string/Welcome"
        android:onClick="PlaySound"
        android:src="@drawable/ear_listen" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:clickable="true"
        android:contentDescription="@string/Jansabha"
        android:onClick="openJansabha"
        android:src="@drawable/jansabha" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_toLeftOf="@+id/imageButton9"
        android:clickable="true"
        android:contentDescription="@string/organic"
        android:onClick="openOrganic"
        android:src="@drawable/organic_sticker" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageButton8"
        android:layout_alignTop="@+id/imageButton6"
        android:clickable="true"
        android:contentDescription="@string/Utilities"
        android:onClick="openUtility"
        android:src="@drawable/utilities" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageButton1"
        android:clickable="true"
        android:contentDescription="@string/organic"
        android:onClick="openCall"
        android:src="@drawable/call" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_toRightOf="@+id/imageButton2"
        android:clickable="true"
        android:contentDescription="@string/Weather"
        android:onClick="openWeather"
        android:src="@drawable/weather" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignRight="@+id/imageButton8"
        android:clickable="true"
        android:contentDescription="@string/Finance"
        android:onClick="openFinance"
        android:src="@drawable/finance" />

</RelativeLayout>