<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    tools:context=".Organic" >

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:contentDescription="@string/Sound_organic"
        android:onClick="Sound_organic"
        android:src="@drawable/ear_listen" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageButton2"
        android:clickable="true"
        android:contentDescription="@string/video"
        android:onClick="openIntroVideo"
        android:scaleType="fitXY"
        android:src="@drawable/images" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:contentDescription="@string/Certification"
        android:onClick="dbCertification"
        android:src="@drawable/certificationloc" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton1"
        android:layout_toRightOf="@+id/imageButton2"
        android:text="@string/video"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton3"
        android:layout_centerHorizontal="true"
        android:text="@string/Certification" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/imageButton5"
        android:clickable="true"
        android:contentDescription="@string/benefits_organic"
        android:onClick="openBenefits"
        android:src="@drawable/benefits_organic" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="23dp"
        android:clickable="true"
        android:contentDescription="@string/method_organic"
        android:onClick="openMethodOrganic"
        android:src="@drawable/about_organic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton4"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageButton4"
        android:text="@string/benefits_organic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/imageButton5"
        android:layout_below="@+id/imageButton5"
        android:text="@string/method_organic" />

</RelativeLayout>