<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_back"
    tools:context=".Weather" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:text="@string/title_activity_weather"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:contentDescription="@string/Sound_weather"
        android:onClick="WeatherSoundPlay"
        android:src="@drawable/ear_listen" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="@string/WeeklyRainfallForecast"
        android:onClick="openWeeklyForecast"
        android:scaleType="fitXY"
        android:src="@drawable/rain_cloud" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/WeeklyRainfallForecast"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>